# cmd/smartway-task/docs/swagger.json
@@ -154,7 +154,7 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Path parameter 'departmentName'",
                         "name": "departmentName",
                         "in": "path",
@@ -378,6 +378,14 @@
         },
         "internal_app_entrypoint_http.createEmployeeRequestBody": {
             "type": "object",
+            "required": [
+                "company_id",
+                "department",
+                "name",
+                "passport",
+                "phone",
+                "surname"
+            ],
             "properties": {
                 "company_id": {
                     "type": "integer"
